# renderdoc-mcp

./: .gitignore  CMakeLists.txt  LICENSE  README-CN.md  README.md  install-codex.ps1
.github/workflows/: ci.yml  release.yml
docs/superpowers/plans/: 2026-03-26-renderdoc-mcp-testing-implementation.md  2026-03-26-renderdoc-mcp-v1-implementation.md  2026-03-26-renderdoc-mcp-v2-development-plan.md  2026-03-31-capture-frame-implementation.md  2026-04-01-phase1-debug-tools.md  2026-04-01-phase2-shader-mesh-assert.md  2026-04-02-diff-engine.md  2026-04-02-phase4-pass-analysis.md  2026-04-09-validation-polish.md
docs/superpowers/specs/: 2026-03-26-renderdoc-mcp-testing-design.md  2026-03-26-renderdoc-mcp-v1-design.md  2026-03-31-capture-frame-design.md  2026-04-01-phase1-debug-tools-design.md  2026-04-01-phase2-shader-mesh-assert-design.md  2026-04-02-diff-engine-design.md  2026-04-02-phase4-pass-analysis-design.md  2026-04-09-validation-polish-design.md
release-notes/: v0.1.0.md  v0.2.0.md  v0.2.1.md  v0.2.2.md  v0.3.0.md
scripts/: package-release.ps1  smoke-test.ps1  validate-release-package.ps1
skill/: SKILL.md
skills/renderdoc-mcp/: SKILL.md
skills/renderdoc-mcp/agents/: openai.yaml
src/: main.cpp  mcp_server.cpp  mcp_server.h  mcp_server_default.cpp  renderdoc_wrapper.cpp  renderdoc_wrapper.h  tool_registry.cpp  tool_registry.h
src/cli/: cli_parse.cpp  cli_parse.h  main.cpp
src/core/: action_helpers.cpp  action_helpers.h  assertions.cpp  assertions.h  capture.cpp  capture.h  cbuffer.cpp  cbuffer.h  constants.h  counters.cpp  counters.h  debug.cpp  debug.h  diff.cpp  diff.h  diff_alignment.cpp  diff_internal.h  diff_pipeline.cpp  diff_session.cpp  diff_session.h  diff_structure.cpp  diff_summary.cpp  errors.cpp  errors.h  events.cpp  events.h  export.cpp  export.h  info.cpp  info.h  mesh.cpp  mesh.h  pass_analysis.cpp  pass_analysis.h  pipeline.cpp  pipeline.h  pixel.cpp  pixel.h  remote_connection.cpp  remote_connection.h  (+19 more)
src/mcp/: action_flags.cpp  mcp_server.cpp  mcp_server.h  mcp_server_default.cpp  serialization.cpp  serialization.h  tool_registry.cpp  tool_registry.h
src/mcp/tools/: assertion_tools.cpp  capture_tools.cpp  cbuffer_tools.cpp  counter_tools.cpp  debug_tools.cpp  diff_tools.cpp  event_tools.cpp  export_tools.cpp  info_tools.cpp  mesh_tools.cpp  pass_tools.cpp  pipeline_tools.cpp  pixel_tools.cpp  resource_tools.cpp  session_tools.cpp  shader_edit_tools.cpp  shader_tools.cpp  snapshot_tools.cpp  texstats_tools.cpp  tools.h  usage_tools.cpp
src/tools/: event_tools.cpp  export_render_target.cpp  export_tools.cpp  get_pipeline_state.cpp  goto_event.cpp  info_tools.cpp  list_events.cpp  open_capture.cpp  pipeline_tools.cpp  resource_tools.cpp  session_tools.cpp  shader_tools.cpp  tools.h
tests/: CMakeLists.txt
tests/fixtures/: vkcube.rdc
tests/integration/: test_capture.cpp  test_protocol.cpp  test_tools.cpp  test_tools_diff.cpp  test_tools_phase1.cpp  test_tools_phase2.cpp  test_tools_phase4.cpp  test_workflow.cpp
tests/unit/: renderdoc_wrapper_stub.cpp  session_stub.cpp  test_cli_parse.cpp  test_diff_algo.cpp  test_mcp_server.cpp  test_pass_analysis.cpp  test_serialization.cpp  test_tool_registry.cpp
